--- a/AresUI/index.css
+++ b/AresUI/index.css
@@ -32,7 +32,7 @@
 body {
   margin: 0px;
   margin-top:50px;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: #2a2b3d;
 }
 .my-col1
@@ -793,4 +793,15 @@ h1 {
 .btn:hover {
   background: rebeccapurple;
   box-shadow: 0 3px 0 0 deeppink;
+}
+
+
+
+
+
+/*CONTROL INPUT FORM*/
+
+.control-box
+{
+  height:13em;
 }
